# libetpan

./: .gitignore  .travis.yml  COPYRIGHT  Makefile.am  Package.swift  README.md  RELEASE.md  autogen.sh  configure  configure.ac  libetpan-config.h.in  libetpan.pc.in  rules.mk
.github/workflows/: android-build.yml
build-android/: .gitignore  README.md  build.sh
build-android/example/: .gitignore  build.gradle.kts  prepare-libs.sh  settings.gradle.kts
build-android/example/app/src/main/cpp/: CMakeLists.txt  libetpan_jni.c
build-android/include/: config.h
build-android/jni/: Android.mk
build-mac/: README  prepare-ios.sh  update.sh
build-mac/config-ios/: config.h
build-mac/dependencies/: cyrus-2.1.25-libetpan.patch  prepare-cyrus-sasl.sh
build-mac/include/: config.h  config.h~
build-mac/libetpan Tests.xcodeproj/: project.pbxproj
build-mac/libetpan.xcodeproj/: project.pbxproj
build-mac/libetpan.xcworkspace/: contents.xcworkspacedata
build-nodejs/: binding.gyp  imap.js  imapset.js  libetpanjs.cc  response.cc  response.h  typesconv.cc  typesconv.h
build-release/: prepare-release.sh
build-spm/: update-public-headers.sh
build-spm/include/: config.h
build-windows/: Makefile.am  README.md  README.txt  build_headers.bat  build_headers.list  gen-public-headers.sh  libetpan-config.h  libetpan.sln  libetpan_version.h  stdbool.h
build-windows/libetpan/: libetpan.vcproj  libetpan.vcxproj  libetpan.vcxproj.filters
build-windows/readmsg/: readmsg.vcproj  readmsg.vcxproj  readmsg.vcxproj.filters
build-windows/smtpsend/: smtpsend.vcproj  smtpsend.vcxproj  smtpsend.vcxproj.filters
doc/: API.sgml  DOCUMENTATION
include/libetpan/: README.me  mailimap_types.h  mailsmtp.h  mailsmtp_types.h
plans/: activesync-http-plan.md  activesync-low-level-plan.md  activesync-wbxml-plan.md  rfc2231-support-plan.md
spm_include/libetpan/: acl_parser.h  acl_sender.h  annotatemore_parser.h  annotatemore_sender.h  base64.h  clientid.h  clientid_sender.h  condstore_private.h  connect.h  date.h  generic_cache.h  getopt.h  hmac-md5.h  imfcache.h  libetpan-config.h  libetpan_version.h  mail_cache_db.h  mail_cache_db_types.h  maildirdriver_tools.h  maildriver_tools.h  mailimap_id_parser.h  mailimap_id_sender.h  mailimap_keywords.h  mailimap_parser.h  mailimap_print.h  mailimap_sender.h  mailimf_write.h  mailmbox_parse.h  mailmessage_tools.h  mailmime_write.h  mailprivacy_tools_private.h  mailsasl.h  mailsasl_private.h  mailsmtp_private.h  mailstorage_tools.h  mailstream_cancel.h  mailstream_cancel_types.h  mailstream_ssl_private.h  mboxdriver_tools.h  md5.h  (+17 more)
src/: Makefile.am  dummy.cpp
src/data-types/: Makefile.am  base64.c  base64.h  carray.c  carray.h  charconv.c  charconv.h  chash.c  chash.h  connect.c  connect.h  extensions.c  extensions.h  mail_cache_db.c  mail_cache_lmdb.c  maillock.c  mailsasl.c  mailsasl.h  mailsasl_private.h  mailsem.c  mailstream.c  mailstream.h  mailstream_cancel.c  mailstream_cfstream.c  mailstream_cfstream.h  mailstream_compress.c  mailstream_compress.h  mailstream_helper.c  mailstream_helper.h  mailstream_low.c  mailstream_low.h  mailstream_socket.c  mailstream_ssl.c  mailstream_ssl.h  mailstream_ssl_private.h  mailstream_types.h  md5.c  md5.h  md5global.h  md5namespace.h  (+6 more)
src/engine/: mailengine.c  mailprivacy_gnupg.c  mailprivacy_smime.c  mailprivacy_tools.c
src/low-level/: Makefile.am
src/low-level/activesync/: Makefile.am  mailactivesync.c  mailactivesync.h  mailactivesync_codes.c  mailactivesync_codes.h  mailactivesync_command.c  mailactivesync_command.h  mailactivesync_http.c  mailactivesync_http.h  mailactivesync_types.c  mailactivesync_types.h  mailactivesync_wbxml.c  mailactivesync_wbxml.h
src/low-level/imap/: Makefile.am  acl.c  annotatemore_parser.c  annotatemore_types.c  clientid.c  clientid.h  clientid_sender.c  clientid_sender.h  condstore.c  condstore.h  condstore_private.h  condstore_types.c  condstore_types.h  enable.c  idle.c  mailimap.c  mailimap.h  mailimap_compress.c  mailimap_compress.h  mailimap_extension.c  mailimap_extension.h  mailimap_extension_types.h  mailimap_helper.c  mailimap_helper.h  mailimap_id.c  mailimap_id.h  mailimap_id_parser.c  mailimap_id_parser.h  mailimap_id_sender.c  mailimap_id_sender.h  mailimap_id_types.c  mailimap_id_types.h  mailimap_keywords.c  mailimap_oauth2.c  mailimap_oauth2.h  mailimap_parser.c  mailimap_parser.h  mailimap_print.c  mailimap_sender.c  mailimap_sender.h  (+35 more)
src/main/: libetpan.h  libetpan_version.c  libetpan_version.h.in
src/windows/: dirent.c  misc.c  mmap.c  time_r.c  win_etpan.h  win_init.cpp
tests/: Makefile.am  README  activesync-http-test.c  activesync-ms-device-oauth.py  activesync-sample-test.c  activesync-sample.c  activesync-wbxml-test.c  decrypt.c  fetch-attachment.c  foobar.php  frm-simple.c  frm-tree.c  frm.c  imap-sample.c  mime-create.c  mime-parse.c  option-parser.c  option-parser.h  pop-sample.c  readmsg-simple.c  readmsg-uid.c  readmsg.c  smtpsend.c
tests/fuzz/: README.md  fuzz_imap_response.c  imap.dict
travis/: before-script.sh  script.sh
unittest/: Makefile  command_parameter_sender_test.c  command_sender_test.c  imap_test_utils.c  imap_test_utils.h  response_data_test.c  response_done_test.c  unsupported_response_test.c
unittest/charset-detection/: main.c
unittest/common/: test_utils.c  test_utils.h
unittest/data-types/: md5_test.c
unittest/imap/: command_parameter_sender_test.c  command_parameter_sender_test.h  command_sender_test.c  command_sender_test.h  idle_test.c  idle_test.h  imap_test_utils.c  imap_test_utils.h  imap_tests.h  main.c  response_data_test.c  response_data_test.h  response_done_test.c  response_done_test.h  unsupported_response_test.c  unsupported_response_test.h
unittest/imap-utf7/: main.c
unittest/imf/: imf_tests.h  main.c  parser_test.c
unittest/mime/: main.c  mime_tests.h  parser_test.c
unittest/mime-builder/: main.c  mime_builder_helpers.c  mime_builder_helpers.h
unittest/mime-parser/: JSON_SERIALIZATION_PLAN.md  json_writer.c  json_writer.h  main.c  mime_serializer.c  mime_serializer.h
(+258 files in other folders)
